--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
       font-family: 'Arial', sans-serif;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      padding-top: 60px;
+      height: 100vh;
     }
 
     .logo {
@@ -24,8 +23,6 @@
       color: #4285F4;
       letter-spacing: -1px;
       margin-bottom: 30px;
-      cursor: pointer;
-      user-select: none;
     }
 
     .logo span:nth-child(2) { color: #EA4335; }
@@ -58,33 +55,28 @@
     }
 
     button {
-      background: linear-gradient(90deg, #4285F4, #34A853);
-      color: white;
+      background-color: #f8f9fa;
       border: none;
-      padding: 10px 25px;
-      border-radius: 25px;
-      font-size: 15px;
+      padding: 10px 20px;
+      margin-top: 30px;
+      border-radius: 5px;
+      font-size: 14px;
       cursor: pointer;
       transition: 0.2s;
-      margin-top: 30px;
     }
 
     button:hover {
-      opacity: 0.9;
+      background-color: #f1f3f4;
     }
 
-    /* Esconde completamente o CSE invisível */
-    .gsc-control-cse {
-      display: none !important;
-    }
-
-    .gcse-searchresults-only {
-      display: none;
+    .gcse-search {
+      margin-top: 40px;
+      width: 100%;
     }
   </style>
 </head>
 <body>
-  <div class="logo" onclick="window.location.href='https://augustomiguelfarias7-cmd.github.io/Pull/'">
+  <div class="logo">
     <span>P</span><span>u</span><span>l</span><span>l</span><span>.</span><span>AI</span>
   </div>
 
@@ -94,38 +86,17 @@
 
   <button onclick="doSearch()">Buscar</button>
 
-  <!-- Google CSE (invisível, apenas para funcionar no site de resultados) -->
   <script async src="https://cse.google.com/cse.js?cx=456655f16500e46db"></script>
-
-  <div class="gcse-searchresults-only" data-enableHistory="true" data-queryParameterName="q"></div>
+  <div class="gcse-search"></div>
 
   <script>
     function doSearch() {
-      const query = document.getElementById('searchInput').value.trim();
-      if (query !== "") {
-        // Vai para a página de resultados
-        window.location.href = "https://augustomiguelfarias7-cmd.github.io/Pull/?q=" + encodeURIComponent(query);
+      const query = document.getElementById('searchInput').value;
+      if (query.trim() !== "") {
+        const element = google.search.cse.element.getElement('standard0');
+        if (element) element.execute(query);
       }
     }
-
-    // Buscar com Enter
-    document.getElementById('searchInput').addEventListener('keypress', function(e) {
-      if (e.key === 'Enter') doSearch();
-    });
-
-    // Mostrar resultados se tiver ?q=
-    window.onload = function() {
-      const params = new URLSearchParams(window.location.search);
-      const query = params.get('q');
-      if (query) {
-        document.getElementById('searchInput').value = query;
-        // Espera o script carregar e executa
-        setTimeout(() => {
-          const searchEl = google.search.cse.element.getElement('searchresults-only0');
-          if (searchEl) searchEl.execute(query);
-        }, 800);
-      }
-    };
   </script>
 </body>
 </html>
